# CS6241---Project-2

./: CMakeLists.txt
DestructiveMerges/: CMakeLists.txt  CopyPropagation.cpp  DataflowAnalysis.h  DataflowAnalysisTest.cpp  DestructiveMergeEliminationPass.cpp  DestructiveMerges.h  DestructiveMergesRun.cpp  MakeSplitGraph.h  SplitGraphTest.cpp
benchmarks/bzip_benchmark/destrutive_merge/: bzip2.opt.bc  bzip2.opt.s  cfg.isempty_RL.dot.ps
benchmarks/bzip_benchmark/sccp_test/: bzip2.bc  bzip2.opt.bc  bzip2.opt.s  cfg.isempty_RL.dot.ps
benchmarks/gzip_benchmark/destructive_merge/: gzip.c  gzip.opt.bc  gzip.opt.s  gzip.opt0.bc  gzip.opt0.s  perform_test_destrutive_merge.sh
benchmarks/gzip_benchmark/sccp/: gzip.bc  gzip.opt.bc  gzip.opt.s  perform_test_sccp.sh
llvm_changes/: SCCP.cpp  Value.cpp  Value.h
report/: cThrash_mAlharthi_project2_report.aux  cThrash_mAlharthi_project2_report.out  cThrash_mAlharthi_project2_report.tex
test/: bzip2.bc  cfg.main.dot  simple_test.bc  simple_test.c  simple_test.ll
